// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly hide upgrade/uninstall buttons 1`] = `
<div
  className="boxed-group boxed-group-inner marketplace-edition"
>
  <EditionBoxBadge
    editionKey="foo"
    status={
      Object {
        "currentEditionKey": "",
        "installationStatus": "NONE",
        "nextEditionKey": "",
      }
    }
  />
  <div>
    <h3
      className="spacer-bottom"
    >
      Foo
    </h3>
    <p>
      Foo desc
    </p>
  </div>
  <div
    className="marketplace-edition-action spacer-top"
  >
    <a
      href="more_url"
      target="_blank"
    >
      marketplace.learn_more
    </a>
  </div>
</div>
`;

exports[`should correctly hide upgrade/uninstall buttons 2`] = `
<div
  className="boxed-group boxed-group-inner marketplace-edition"
>
  <EditionBoxBadge
    editionKey="foo"
    status={
      Object {
        "currentEditionKey": "foo",
        "installationStatus": "NONE",
        "nextEditionKey": "",
      }
    }
  />
  <div>
    <h3
      className="spacer-bottom"
    >
      Foo
    </h3>
    <p>
      Foo desc
    </p>
  </div>
  <div
    className="marketplace-edition-action spacer-top"
  >
    <a
      href="more_url"
      target="_blank"
    >
      marketplace.learn_more
    </a>
  </div>
</div>
`;

exports[`should disable uninstall button 1`] = `
<div
  className="boxed-group boxed-group-inner marketplace-edition"
>
  <EditionBoxBadge
    editionKey="foo"
    status={
      Object {
        "currentEditionKey": "foo",
        "installationStatus": "AUTOMATIC_IN_PROGRESS",
        "nextEditionKey": "foo",
      }
    }
  />
  <div>
    <h3
      className="spacer-bottom"
    >
      Foo
    </h3>
    <p>
      Foo desc
    </p>
  </div>
  <div
    className="marketplace-edition-action spacer-top"
  >
    <a
      href="more_url"
      target="_blank"
    >
      marketplace.learn_more
    </a>
    <button
      className="button-red"
      disabled={true}
      onClick={[Function]}
    >
      marketplace.uninstall
    </button>
  </div>
</div>
`;

exports[`should disable upgrade button 1`] = `
<div
  className="boxed-group boxed-group-inner marketplace-edition"
>
  <EditionBoxBadge
    editionKey="foo"
    status={
      Object {
        "currentEditionKey": "",
        "installationStatus": "AUTOMATIC_IN_PROGRESS",
        "nextEditionKey": "foo",
      }
    }
  />
  <div>
    <h3
      className="spacer-bottom"
    >
      Foo
    </h3>
    <p>
      Foo desc
    </p>
  </div>
  <div
    className="marketplace-edition-action spacer-top"
  >
    <a
      href="more_url"
      target="_blank"
    >
      marketplace.learn_more
    </a>
    <button
      disabled={true}
      onClick={[Function]}
    >
      marketplace.upgrade
    </button>
  </div>
</div>
`;

exports[`should disable upgrade button 2`] = `
<div
  className="boxed-group boxed-group-inner marketplace-edition"
>
  <EditionBoxBadge
    editionKey="foo"
    status={
      Object {
        "currentEditionKey": "",
        "installationStatus": "AUTOMATIC_READY",
        "nextEditionKey": "foo",
      }
    }
  />
  <div>
    <h3
      className="spacer-bottom"
    >
      Foo
    </h3>
    <p>
      Foo desc
    </p>
  </div>
  <div
    className="marketplace-edition-action spacer-top"
  >
    <a
      href="more_url"
      target="_blank"
    >
      marketplace.learn_more
    </a>
    <button
      disabled={true}
      onClick={[Function]}
    >
      marketplace.upgrade
    </button>
  </div>
</div>
`;

exports[`should display a downgrade button 1`] = `
<div
  className="boxed-group boxed-group-inner marketplace-edition"
>
  <EditionBoxBadge
    editionKey="foo"
    status={
      Object {
        "currentEditionKey": "",
        "installationStatus": "NONE",
        "nextEditionKey": "",
      }
    }
  />
  <div>
    <h3
      className="spacer-bottom"
    >
      Foo
    </h3>
    <p>
      Foo desc
    </p>
  </div>
  <div
    className="marketplace-edition-action spacer-top"
  >
    <a
      href="more_url"
      target="_blank"
    >
      marketplace.learn_more
    </a>
    <button
      disabled={false}
      onClick={[Function]}
    >
      marketplace.downgrade
    </button>
  </div>
</div>
`;

exports[`should display the edition 1`] = `
<div
  className="boxed-group boxed-group-inner marketplace-edition"
>
  <EditionBoxBadge
    editionKey="foo"
    status={
      Object {
        "currentEditionKey": "",
        "installationStatus": "NONE",
        "nextEditionKey": "",
      }
    }
  />
  <div>
    <h3
      className="spacer-bottom"
    >
      Foo
    </h3>
    <p>
      Foo desc
    </p>
  </div>
  <div
    className="marketplace-edition-action spacer-top"
  >
    <a
      href="more_url"
      target="_blank"
    >
      marketplace.learn_more
    </a>
    <button
      disabled={false}
      onClick={[Function]}
    >
      marketplace.upgrade
    </button>
  </div>
</div>
`;
